--- a/Strategy_Inc.ipynb
+++ b/Strategy_Inc.ipynb
@@ -691,7 +691,9 @@
    "cell_type": "code",
    "execution_count": 96,
    "id": "f3c635fa-2f60-45d8-b62c-4bf06c80c13a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
